# prj_lib

./: LICENSE  README.md  pyproject.toml
.github/workflows/: fluxodetrabalho.yml
prj_lib/: prj.py
prj_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
