[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prj_lib"
version = "0.1.0"
description = "It's a package to build the directories in a project structure."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "Proprietary"}
authors = [
  {name = "lcds", email = "lcds.gru@gmail.com"}
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/lcds2019/prj_lib"
